--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/tomas0011/unahur-bot#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
+    "discord.js": "^13.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.12"
   }
 }
